--- a/views/media.pug
+++ b/views/media.pug
@@ -350,6 +350,10 @@ block content
             }
         }
 
+        /*button.plyr__control  {*/
+            /*display: none !important;*/
+        /*}*/
+
 
 
     br
