--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -84,7 +84,7 @@ script.
 
     // only hide button if it's on desktop
     if(width > 900){
-      $('button.plyr__control').css('display', 'none');
+      $('button.plyr__control.plyr__control--overlaid').css('display', 'none');
     }
 
   })
