--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -35,24 +35,6 @@ block content
 
     div.container
         div.col-sm-12.text-center(style="margin:0 auto;")
-            //h2
-            //h2.fw(style="display:inline;") Search For Keyword
-            //br
-            //br
-            //div(style="margin: 0 auto;")
-            //    input(type='hidden', name='_csrf', value=_csrf )
-            //    input.search-query-input.form-control(style="margin: 0 auto;width:400px;max-width:100%" type='search', name='search', id='search' placeholder=`${searchQuery !== 'undefined' ? searchQuery: ''}`)
-            //    br
-            //    // NOTE this does not work by sending a post, rather see the JS it only sends a GET request
-            //    div.search-upload-buttons-container
-            //        button.fw.search-uploads-button.btn-lg.btn.btn-primary(type='submit' name="type" value="upload")
-            //            //i.fa.fa-lock
-            //            | Search For Media
-            //
-            //        button.fw.search-users-button.btn-lg.btn.btn-primary(type='submit' name="type" value="user")
-            //            //i.fa.fa-lock
-            //            | Search For User
-
 
 
         // UPLOADS RESULTS
@@ -83,8 +65,15 @@ block content
 
                 include ../viewPartials/searchPagination
 
-                p.fw(style="font-size:27px;margin-top:30px;margin-bottom:10px;") #{totalUploadsAmount} Uploads Found
+                if totalUploadsAmount == 1
+                    p.fw(style="font-size:27px;margin-top:30px;margin-bottom:10px;") #{totalUploadsAmount} Upload Found
+                else
+                    p.fw(style="font-size:27px;margin-top:30px;margin-bottom:10px;") #{totalUploadsAmount} Uploads Found
+
                 p.fw.mobileSearchQuery(style="display:none;font-size:20px;margin-top:10px;margin-bottom:30px;") Search Query: #{searchQuery}
+                br
+                br
+                br
 
                 if uploads && uploads.length > 0
                     each upload in uploads
