--- a/views/media.pug
+++ b/views/media.pug
@@ -237,6 +237,9 @@ block content
             /*.postButton {*/
             /*display: none !important;*/
             /*}*/
+            .screenshotButton {
+                margin-left: 5px !important;
+            }
         }
 
 
@@ -348,6 +351,7 @@ block content
             .emailShareButton, .facebookShareButton, .twitterShareButton {
                 margin-left: 5px !important;
             }
+
         }
 
         /*button.plyr__control  {*/
