--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -69,10 +69,10 @@ block content
 
                 if channel.thumbnailUrl || channel.customThumbnail
                     if channel.customThumbnail
-                        a(href=`${uploadServer}/${user.channelUrl}/${user.customThumbnail}`)
+                        a(href=`${uploadServer}/${channel.channelUrl}/${channel.customThumbnail}`)
                             img(src=`${uploadServer}/${channel.channelUrl}/${channel.customThumbnail}` style="border-radius:5px;height:200px;max-width:300px;")
                     else
-                        a(href=`${uploadServer}/${user.channelUrl}/${user.customThumbnail}`)
+                        a(href=`${uploadServer}/${channel.channelUrl}/${channel.customThumbnail}`)
                             img(src=`${uploadServer}/${channel._id}/unique.png` style="border-radius:5px;height:200px;max-width:300px;")
 
                         //img(src=channel.thumbnailUrl width="120px" height="120px")
