--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -43,23 +43,25 @@ block content
             if uploads
                 div.text-center.center-div.search-upload-buttons-container
 
-                    a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=user`)
-                        h2 Search For User
+                a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=user`)
+                    h2(style="color:#d8dcde;") Search For User
+                    br
+                    br
 
 
                     // search type dropdown
-                    div.dropdown.searchTypeDropdown(style="display:inline;margin-right:15px;")
-
-                        button.fw.btn.btn-primary.dropdown-toggle.searchTypeButton(type='button', data-toggle='dropdown' style="border-radius:5px;")
-                            | Search For: Uploads &nbsp
-
-                            span.caret
-
-                        ul.dropdown-menu.dropdown
-                            li
-                                a(href=`/search?searchQuery=${searchQuery}&orderBy=popular&mediaType=${mediaType}&searchType=${searchType}`) Uploads &nbsp
-                            li
-                                a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=user`) Users &nbsp
+                    //div.dropdown.searchTypeDropdown(style="display:inline;margin-right:15px;")
+                    //
+                    //    button.fw.btn.btn-primary.dropdown-toggle.searchTypeButton(type='button', data-toggle='dropdown' style="border-radius:5px;")
+                    //        | Search For: Uploads &nbsp
+                    //
+                    //        span.caret
+                    //
+                    //    ul.dropdown-menu.dropdown
+                    //        li
+                    //            a(href=`/search?searchQuery=${searchQuery}&orderBy=popular&mediaType=${mediaType}&searchType=${searchType}`) Uploads &nbsp
+                    //        li
+                    //            a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=user`) Users &nbsp
 
                     include ../viewPartials/orderByDropdown
 
@@ -76,7 +78,7 @@ block content
                 else
                     p.fw(style="font-size:27px;margin-top:30px;margin-bottom:10px;") #{totalUploadsAmount} Uploads Found
 
-                p.fw.mobileSearchQuery(style="display:none;font-size:20px;margin-top:10px;margin-bottom:30px;") Search Query: #{searchQuery}
+                p.fw(style="font-size:20px;margin-top:10px;margin-bottom:30px;") Search Query: #{searchQuery}
                 br
                 br
                 br
@@ -96,7 +98,7 @@ block content
             if channels
 
                 a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=`)
-                    h2 Search For Uploads
+                    h2(style="color:#d8dcde;") Search For Uploads
 
                 //div.dropdown(style="display:inline;margin-right:15px;")
                 //    button.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
