--- a/views/media.pug
+++ b/views/media.pug
@@ -427,6 +427,8 @@ block content
             br
             br
 
+            h1 Last Watched Time: #{lastWatchedTime.secondsWatched}
+
 
             // UPLOADER DETAILS SECTION
             div.col-sm-3.uploader-details-section(style="")
