finish search button

--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -109,6 +109,12 @@ block content
         div.col-sm-12.text-center(style="margin:0 auto;")
             if channels
 
+                h4.fw Showing results for uploads.
+
+                h4.fw Click 'Search For User' to search for a user.
+
+                br
+
                 a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=`)
 
                     button.fw.btn.btn-primary.btn-lg(style="color:#d8dcde;border-radius:6px;margin-bottom:17px;cursor:pointer;") Search For Uploads
